--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -125,26 +125,7 @@
               <div class="collapse navbar-collapse mean-menu">
                 <ul class="navbar-nav ms-auto">
                   <li class="nav-item">
-                    <a href="#" class="nav-link">
-                      Home <i class="las la-angle-down"></i>
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li class="nav-item">
-                        <a href="index.html" class="nav-link">Home Demo - 1</a>
-                      </li>
-
-                      <li class="nav-item">
-                        <a href="index-2.html" class="nav-link"
-                          >Home Demo - 2</a
-                        >
-                      </li>
-
-                      <li class="nav-item">
-                        <a href="index-3.html" class="nav-link"
-                          >Home Demo - 3</a
-                        >
-                      </li>
-                    </ul>
+                    <a href="#" class="nav-link active"> Home </a>
                   </li>
 
                   <li class="nav-item">
@@ -152,126 +133,19 @@
                   </li>
 
                   <li class="nav-item">
-                    <a href="#" class="nav-link active">
-                      Pages <i class="las la-angle-down"></i>
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li class="nav-item">
-                        <a href="about.html" class="nav-link">About</a>
-                      </li>
-                      <li class="nav-item">
-                        <a href="team.html" class="nav-link">Team</a>
-                      </li>
-
-                      <li class="nav-item">
-                        <a href="testimonials.html" class="nav-link"
-                          >Testimonials</a
-                        >
-                      </li>
-
-                      <li class="nav-item">
-                        <a href="gallery.html" class="nav-link">Gallery</a>
-                      </li>
-
-                      <li class="nav-item">
-                        <a href="faq.html" class="nav-link">FAQ</a>
-                      </li>
-
-                      <li class="nav-item">
-                        <a href="#" class="nav-link">
-                          User <i class="las la-angle-right"></i>
-                        </a>
-                        <ul class="dropdown-menu">
-                          <li class="nav-item">
-                            <a href="sign-in.html" class="nav-link">Sign In</a>
-                          </li>
-
-                          <li class="nav-item">
-                            <a href="sign-up.html" class="nav-link">Sign Up</a>
-                          </li>
-                        </ul>
-                      </li>
-
-                      <li class="nav-item">
-                        <a href="privacy-policy.html" class="nav-link active"
-                          >Privacy Policy</a
-                        >
-                      </li>
-
-                      <li class="nav-item">
-                        <a href="terms-condition.html" class="nav-link"
-                          >Terms & Condition</a
-                        >
-                      </li>
-
-                      <li class="nav-item">
-                        <a href="coming-soon.html" class="nav-link"
-                          >Coming Soon</a
-                        >
-                      </li>
-
-                      <li class="nav-item">
-                        <a href="error-404.html" class="nav-link"
-                          >404 Error Page</a
-                        >
-                      </li>
-                    </ul>
+                    <a href="#" class="nav-link"> Services </a>
                   </li>
 
                   <li class="nav-item">
-                    <a href="#" class="nav-link">
-                      Services <i class="las la-angle-down"></i>
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li class="nav-item">
-                        <a href="services.html" class="nav-link">Services</a>
-                      </li>
-                      <li class="nav-item">
-                        <a href="service-details.html" class="nav-link"
-                          >Services Details</a
-                        >
-                      </li>
-                    </ul>
+                    <a href="#" class="nav-link"> Pricing </a>
                   </li>
 
                   <li class="nav-item">
-                    <a href="#" class="nav-link">
-                      Case Study <i class="las la-angle-down"></i>
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li class="nav-item">
-                        <a href="case-study.html" class="nav-link"
-                          >Case Study</a
-                        >
-                      </li>
-
-                      <li class="nav-item">
-                        <a href="case-study-details.html" class="nav-link"
-                          >Case Study Details</a
-                        >
-                      </li>
-                    </ul>
+                    <a href="#" class="nav-link"> Ecosystem </a>
                   </li>
 
                   <li class="nav-item">
-                    <a href="#" class="nav-link">
-                      Attorney <i class="las la-angle-down"></i>
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li class="nav-item">
-                        <a href="attorney.html" class="nav-link">Attorney</a>
-                      </li>
-
-                      <li class="nav-item">
-                        <a href="attorney-details.html" class="nav-link"
-                          >Attorney Details</a
-                        >
-                      </li>
-                    </ul>
-                  </li>
-
-                  <li class="nav-item">
-                    <a href="contact.html" class="nav-link">Contact</a>
+                    <a href="contact.html" class="nav-link">Contact Us</a>
                   </li>
                   <li class="nav-item">
                     <a href="javascript:void(0)" class="nav-link search-box">
