--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
                   </li>
 
                   <li class="nav-item">
-                    <a href="services.html" class="nav-link"> Services </a>
+                    <a href="#" class="nav-link"> Services </a>
                   </li>
 
                   <li class="nav-item">
-                    <a href="#" class="nav-link"> Pricing </a>
+                    <a href="pricing.html" class="nav-link"> Pricing </a>
                   </li>
 
                   <li class="nav-item">
@@ -145,7 +145,7 @@
                   </li>
 
                   <li class="nav-item">
-                    <a href="contact.html" class="nav-link">Contact Us</a>
+                    <a href="contact.html" class="nav-link">Contact</a>
                   </li>
                   <li class="nav-item">
                     <a href="javascript:void(0)" class="nav-link search-box">
