--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
           <div class="col-lg-4 col-sm-6">
             <div class="service-card">
               <a href="service-details.html">
-                <img src="assets/img/services/service1.jpg" alt="Image" />
+                <img src="assets/img/services/civil law.png" alt="Image" />
               </a>
               <div class="service-text">
                 <i class="las la-city"></i>
@@ -438,7 +438,7 @@
           <div class="col-lg-4 col-sm-6">
             <div class="service-card">
               <a href="service-details.html">
-                <img src="assets/img/services/service2.jpg" alt="Image" />
+                <img src="assets/img/services/family law.png" alt="Image" />
               </a>
               <div class="service-text">
                 <i class="las la-users"></i>
@@ -457,7 +457,7 @@
           <div class="col-lg-4 col-sm-6">
             <div class="service-card">
               <a href="service-details.html">
-                <img src="assets/img/services/service3.jpg" alt="Image" />
+                <img src="assets/img/services/business law.png" alt="Image" />
               </a>
               <div class="service-text">
                 <i class="las la-user"></i>
@@ -476,7 +476,7 @@
           <div class="col-lg-4 col-sm-6">
             <div class="service-card">
               <a href="service-details.html">
-                <img src="assets/img/services/service4.jpg" alt="Image" />
+                <img src="assets/img/services/cyber law.png" alt="Image" />
               </a>
               <div class="service-text">
                 <i class="las la-broadcast-tower"></i>
@@ -495,7 +495,7 @@
           <div class="col-lg-4 col-sm-6">
             <div class="service-card">
               <a href="service-details.html">
-                <img src="assets/img/services/service5.jpg" alt="Image" />
+                <img src="assets/img/services/investment law.png" alt="Image" />
               </a>
               <div class="service-text">
                 <i class="las la-balance-scale"></i>
@@ -514,7 +514,7 @@
           <div class="col-lg-4 col-sm-6">
             <div class="service-card">
               <a href="service-details.html">
-                <img src="assets/img/services/service6.jpg" alt="Image" />
+                <img src="assets/img/services/education law.png" alt="Image" />
               </a>
               <div class="service-text">
                 <i class="las la-balance-scale-right"></i>
