fixed the images

--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
         <div class="testimonials-slider owl-carousel owl-theme">
           <div class="testimonials-slider-item">
             <div class="testimonials-img">
-              <img src="assets/img/case-study/case-study1.jpg" alt="Image" />
+              <img src="assets/img/case-study/case-study3.png" alt="Image" />
             </div>
             <div class="img-text">
               <h3>Real Estate Issue</h3>
@@ -685,7 +685,7 @@
 
           <div class="testimonials-slider-item">
             <div class="testimonials-img">
-              <img src="assets/img/case-study/case-study2.jpg" alt="Image" />
+              <img src="assets/img/case-study/case-study2.png" alt="Image" />
             </div>
             <div class="img-text">
               <h3>Money Loundering</h3>
@@ -703,7 +703,7 @@
 
           <div class="testimonials-slider-item">
             <div class="testimonials-img">
-              <img src="assets/img/case-study/case-study3.jpg" alt="Image" />
+              <img src="assets/img/case-study/case-study1.png" alt="Image" />
             </div>
             <div class="img-text">
               <h3>Critical Murder Cas</h3>
