--- a/about.html
+++ b/about.html
@@ -137,7 +137,7 @@
                   </li>
 
                   <li class="nav-item">
-                    <a href="#" class="nav-link"> Pricing </a>
+                    <a href="pricing.html" class="nav-link"> Pricing </a>
                   </li>
 
                   <li class="nav-item">
