--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                   </li>
 
                   <li class="nav-item">
-                    <a href="#" class="nav-link"> Services </a>
+                    <a href="services.html" class="nav-link"> Services </a>
                   </li>
 
                   <li class="nav-item">
