--- a/services.html
+++ b/services.html
@@ -139,7 +139,7 @@
                   </li>
 
                   <li class="nav-item">
-                    <a href="#" class="nav-link"> Pricing </a>
+                    <a href="pricing.html" class="nav-link"> Pricing </a>
                   </li>
 
                   <li class="nav-item">
